update: including all settings generated in the setting directory